cabal-version:      3.0
name:               cutelb
version:            0.1.0.0
synopsis:           A cute load balancer written in Haskell
description:        A lightweight HTTP load balancer with round-robin and least-connections strategies.
license:            MIT
author:             Subinoy Biswas
maintainer:         heysubinoy@gmail.com
category:           Network
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Config.Loader
        Config.Types
        Config.Validate
        Proxy.App
        Proxy.Forward
        Proxy.Routes
        Runtime.Init
        Runtime.State
        Server.HTTP
        Upstream.Strategy
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base           >= 4.14 && < 5,
        aeson          >= 2.0  && < 3,
        bytestring     >= 0.10 && < 1,
        containers     >= 0.6  && < 1,
        http-client    >= 0.7  && < 1,
        http-types     >= 0.12 && < 1,
        stm            >= 2.5  && < 3,
        text           >= 1.2  && < 3,
        wai            >= 3.2  && < 4,
        warp           >= 3.3  && < 4,
        yaml           >= 0.11 && < 1

executable cutelb
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base           >= 4.14 && < 5,
        cutelb,
        text           >= 1.2  && < 3
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
